--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="images/gift.png" type="image/x-icon">
- <link rel="stylesheet" href="Style/style.css" />
-<script src="Js/script.js"></script>
+  <link rel="stylesheet" href=style.css" />
+  <script src="script.js"></script>
 
   <title>FROM ME</title>
 </head>
