--- a/index.html
+++ b/index.html
@@ -1,39 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="images/gift.png" type="image/x-icon">
-<link rel="stylesheet" href="style.css" />
-<script src="script.js" defer></script>
-
-
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FROM ME</title>
+  <link rel="shortcut icon" href="images/gift.png" type="image/x-icon" />
+  <link rel="stylesheet" href="style.css" />
+  <script src="script.js" defer></script>
 </head>
-
 <body>
   <!-- Background malam -->
   <div class="night">
     <div class="stars"></div>
   </div>
 
-  <!-- Title -->
+  <!-- Judul -->
   <h1 class="title"></h1>
 
-  <!-- Button -->
+  <!-- Tombol -->
   <div class="btn-container">
-    <a href="flower.html" class="btn">
+    <a href="#" class="btn">
       <svg height="24" width="24" fill="#FFFFFF" viewBox="0 0 24 24" class="sparkle">
-        <path
-          d="M10,21.236,6.755,14.745.264,11.5,6.755,8.255,10,1.764l3.245,6.491L19.736,11.5l-6.491,3.245ZM18,21l1.5,3L21,21l3-1.5L21,18l-1.5-3L18,18l-3,1.5ZM19.333,4.667,20.5,7l1.167-2.333L24,3.5,21.667,2.333,20.5,0,19.333,2.333,17,3.5Z">
-        </path>
+        <path d="M10,21.236,6.755,14.745.264,11.5,6.755,8.255,10,1.764l3.245,6.491L19.736,11.5l-6.491,3.245ZM18,21l1.5,3L21,21l3-1.5L21,18l-1.5-3L18,18l-3,1.5ZM19.333,4.667,20.5,7l1.167-2.333L24,3.5,21.667,2.333,20.5,0,19.333,2.333,17,3.5Z" />
       </svg>
       <span class="text">Open</span>
     </a>
   </div>
-
-  <script src="js/index.js"></script>
 </body>
-
 </html>
