--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
       <span class="text">Iya dong</span>
     </a>
   </div>
+  <div class="night">
+  <div class="stars"></div>
+</div>
+
 </body>
 
 </html>
