--- a/index.html
+++ b/index.html
@@ -14,17 +14,21 @@
     <div class="stars"></div>
   </div>
 
-  <!-- Judul animasi -->
+  <!-- Teks -->
   <h1 class="title"></h1>
 
-  <!-- Tombol -->
-  <div class="btn-container">
-    <a href="flower.html" class="btn">
-      <svg height="24" width="24" fill="#FFFFFF" viewBox="0 0 24 24" class="sparkle">
-        <path d="M10,21.236,6.755,14.745.264,11.5,6.755,8.255,10,1.764l3.245,6.491L19.736,11.5l-6.491,3.245ZM18,21l1.5,3L21,21l3-1.5L21,18l-1.5-3L18,18l-3,1.5ZM19.333,4.667,20.5,7l1.167-2.333L24,3.5,21.667,2.333,20.5,0,19.333,2.333,17,3.5Z"/>
-      </svg>
-      <span class="text">Open</span>
-    </a>
+  <!-- Tombol utama -->
+  <div class="btn-container" id="mainButtons">
+    <button id="nextBtn">Lanjut</button>
   </div>
+
+  <!-- Tombol pilihan -->
+  <div class="btn-container" id="choiceButtons" style="display: none;">
+    <button id="yesBtn">Mau Main</button>
+    <button id="noBtn">Nggak Dulu</button>
+  </div>
+
+  <!-- Notif akhir -->
+  <p class="notification" id="notif" style="display: none;">Wah parah, nggak dilanjut 😢</p>
 </body>
 </html>
